assets/css/main.scss
---
---
// Import site theme
@import "{{ site.theme }}";

.keyword-tag {
    margin: 0;
    margin-right: $spacing-1;
    font-style: italic;
    font-style: $small-font-size;

    @include with-theme {
        color: color-for(primary);
    }
}

// Add the caret thing
.menu-title:before,
.page-title:before,
a:before {
    content: '>';
}
a {
    text-decoration: none;
}
.menu-links a:before,
.social-link:before {
    content: '';
}

// Oooohhh easter egg lmao
a.easter-egg {
    &:before { content: ''; }
    @include with-theme {
        color: color-for(text);
    }
}

